[Bug] Fix id param exposed to UpdateClub endpoint
