# backend/docs/swagger.json
@@ -98,7 +98,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/repository.UpdateClubParams"
+                            "$ref": "#/definitions/handlers.UpdateClubRequest"
                         }
                     }
                 ],
@@ -679,6 +679,23 @@
                 }
             }
         },
+        "handlers.UpdateClubRequest": {
+            "type": "object",
+            "properties": {
+                "banner_image": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "is_public": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "handlers.UpdateUserRequest": {
             "type": "object",
             "properties": {
@@ -801,29 +818,6 @@
                     "type": "string"
                 },
                 "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "repository.UpdateClubParams": {
-            "type": "object",
-            "properties": {
-                "banner_image": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "is_public": {
-                    "type": "boolean"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "owner_user_id": {
                     "type": "string"
                 }
             }
